fixed gradient of wallpaper on smaller screen

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -12,10 +12,20 @@ h3 {
 	background-color: black;
 }
 
+
 .nav li a {
-	color: white;
-	font-size: 22px;
+	color: black;
+	
 }
+.navbar-home {
+	float: left;
+	height: 50px;
+	padding: 15px 15px;
+	line-height: 20px;
+	font-size: 2em;
+	border: 1px solid red;
+}
+
 
 #nav  {
 	border: 1px solid black;
@@ -46,17 +56,16 @@ h3 {
 	background-position: center;
 	text-align: center;
 	
-	
 }
 
 @media (max-width: 400px) {
 	.wallpaper {
 		border: 1px solid green;
 		background-position: right 35% bottom 0px;
-		
 	}
 }
 /* Source: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Images/Using_CSS_gradients*/
+
 @media (max-width: 400px) {
 	.gradient {
 		/*The old syntax, deprecated and prefixed, for old browsers*/
@@ -78,8 +87,8 @@ h3 {
 
 
 .welcome {
-	padding-top: 45%;
-	padding-bottom:10%;
+	padding-top: 30%;
+	padding-bottom:30%;
 	align-items: center;
 	justify-content: center;
 	font-family: Arial;
@@ -94,15 +103,15 @@ h3 {
 }
 
 .welcome h1 {
-	font-size: 5em;
+	font-size: 6em;
 }
 
 .welcome p {
-	font-size: 2em;
+	font-size: 3em;
 }
 
 .welcome h2 {
-	font-size: 3em;
+	font-size: 4em;
 }
 
 .btn {
